# treedict

./: .gitignore  build.py  pyproject.toml
tests/: common.py  test_badvalues.py  test_branches.py  test_centralsystem.py  test_copying.py  test_deletion.py  test_dictbehavior.py  test_equalities.py  test_hashes.py  test_interactivetree.py  test_iterators_lists.py  test_matching.py  test_names.py  test_pickling.py  test_properties.py  test_regressions.py  test_retrieval.py  test_setting.py  test_update.py  tests.py
treedict/: __init__.py  treedict.pyx
